--- a/src/sass/partials/_booking.scss
+++ b/src/sass/partials/_booking.scss
@@ -173,6 +173,24 @@
       }
 
     }
+
+    &.selected {
+      
+      color: lighten($color-dark, 20%);
+
+      &::after {
+        position: absolute;
+        content: '';
+        width: 100%;
+        height: 100%;
+        left: 0;
+        top: 0;
+        background: $color-success;
+        opacity: 0.4;
+        border: black;
+      }
+    }
+
   }
 
   [data-table="1"] {
